changes to navbar and fixed question form errors not showing

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -84,6 +84,18 @@ textarea {
     outline: 0 !important;
   }
 
+.mt-6 {
+    margin-top: 72px;
+}
+
+.mt-7 {
+    margin-top: 96px;
+}
+
+.mx-20 {
+    margin-left: 20%;
+    margin-right: 20%;
+}
 
 /* PAGINATION */
 .pagination > li > a
